# ChangeLog for www-plugins/noscript
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*noscript-2.2.6 (19 Jan 2012)

  19 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.6 (13 Jan 2012)

  13 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.5 (03 Jan 2012)

  03 Jan 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.4 (20 Dec 2011)

  20 Dec 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.3 (09 Dec 2011)

  09 Dec 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2.1 (23 Nov 2011)

  23 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.2 (16 Nov 2011)

  16 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.9 (10 Nov 2011)

  10 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.8 (29 Oct 2011)

  29 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.7 (22 Oct 2011)

  22 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.6 (21 Oct 2011)

  21 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.5 (12 Oct 2011)

  12 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.4 (29 Sep 2011)

  29 Sep 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.3 (27 Sep 2011)

  27 Sep 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.2.8 (13 Sep 2011)

  13 Sep 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.2.7 (31 Aug 2011)

  31 Aug 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.1.2.6 (12 Aug 2011)

  12 Aug 2011; Martin Väth <martin@mvath.de>