@@ -1,1 +1,1 @@
-DIST noscript-2.2.7.xpi 519408 RMD160 e4c5d796aa86e657158e29d49bb98f2bf4bb9c5e SHA1 eaab0b20f3358a5dd051aeb6815dc86a3e97a4b6 SHA256 08aba3003fc8ce0ce109a8bf7b36f8dfbfb7f27200c17ff6063d46886d5a7aaa
+DIST noscript-2.2.8.xpi 519540 RMD160 f6e8994168fb8e3c6f6aabea2aeb4734b8931c37 SHA1 ea6951f2152dd3c40ac7d9936e3be3224dea273f SHA256 8777c737f2d134af9162b2c2ef3c7ddc027d43aca8cb4fb28cc38203cbaaa709
