@@ -1,1 +1,1 @@
-DIST stylish-1.2.4-tb+sm+fx.xpi 249155 RMD160 093ac6ace5246103436fee4d317f9741b60e2232 SHA1 32dfc83d0536e4e2bdf25bcee08345113eaa72ac SHA256 ff21377a359b11f10c161f72984d74638c0d066516644e509211cebd8e837529
+DIST stylish-1.2.5-fx+tb+sm.xpi 257899 RMD160 17b73699c13e077a5b37b8069f68d7981dee4109 SHA1 cb4723620181b4486b939b807d0be7ec6e1508d0 SHA256 c170c72c49f0e3b06e1b8baac4573eee91b5be49448744596ec291d224b280b8
