@@ -2,7 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
-*noscript-2.2.6 (19 Jan 2012)
+*noscript-2.2.8 (25 Jan 2012)
+
+  25 Jan 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
+*noscript-2.2.7 (19 Jan 2012)
 
   19 Jan 2012; Martin Väth <martin@mvath.de>
   Version bump, remove old ebuild.
